# setkontext

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: DEMO_GUIDE.md  demo-script.md  seed_demo_db.py  test_github_fetch.py
setkontext/: activity.py  cli.py  config.py  context.py  mcp_server.py
setkontext/entire/: fetcher.py
setkontext/extraction/: adr.py  consolidation.py  doc.py  learning.py  models.py  pr.py  session.py
setkontext/github/: client.py  fetcher.py  filter.py
setkontext/query/: engine.py  validator.py
setkontext/storage/: db.py  repository.py
setkontext/ui/: app.py  components.py  graph.py  mode_browse.py  mode_chat.py  mode_settings.py  page_activity.py  page_chat.py  page_decisions.py  page_learnings.py  page_setup.py  page_spotlight.py  ranking.py  styles.py
tests/: conftest.py  test_activity.py  test_adr_extraction.py  test_config.py  test_consolidation.py  test_context.py  test_dedup.py  test_entity_relationships.py  test_file_references.py  test_graph_search.py  test_graph_viz.py  test_learning_extraction.py  test_learnings_storage.py  test_models.py  test_pr_extraction.py  test_pr_filter.py  test_query_engine.py  test_spotlight.py  test_storage.py  test_temporal.py  test_tiered_context.py  test_ui_components.py  test_validator.py  test_watermarks.py
